update content and data

--- a/data/cities/grand-rapids/terra-bagels.yml
+++ b/data/cities/grand-rapids/terra-bagels.yml
@@ -6,6 +6,6 @@ postcode: "49506"
 city: Grand Rapids
 street: "Lake Drive Southeast"
 housenumber: 1413
-phone: "(616) 805-3740"
+phone: "+1-616-805-3740"
 opening_hours: "Mo-Fr 07:00-15:00, Sa-Su 08:00-15:00"
 website: ""
