--- a/data/cities/saginaw/all-your-cellular-needs.yml
+++ b/data/cities/saginaw/all-your-cellular-needs.yml
@@ -4,8 +4,8 @@ latitude: 43.43427
 longitude: -83.94265
 postcode: "48602"
 city: Saginaw
-street: "W Genesee Ave"
+street: "West Genesee Avenue"
 housenumber: 94
 phone: "+1-989-753-4826"
-opening_hours: "Mon-Fri: 10:00AM to 7:00PM, Sat: 10:00AM to 6:00PM"
+opening_hours: "Mo-Fr 10:00-19:00; Sa 10:00-18:00"
 website: "https://allyourcellularneeds.com"
