update content and data

--- a/data/cities/clare/speedway.yml
+++ b/data/cities/clare/speedway.yml
@@ -1,11 +1,11 @@
-id: 7929770860
-type: node
-latitude: 43.84534
-longitude: -84.76892
+id: 849974734
+type: way
+latitude: 43.84526
+longitude: -84.76885
 postcode: "48617"
 city: Clare
 street: "South Clare Avenue"
 housenumber: 9898
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1-989-386-9581"
+opening_hours: "24/7"
+website: "https://www.speedway.com/locations/MI/Clare/9898-South-Clare-Avenue"
