--- a/data/cities/hastings/dollar-general.yml
+++ b/data/cities/hastings/dollar-general.yml
@@ -4,7 +4,7 @@ latitude: 42.52458
 longitude: -85.25291
 postcode: "49058"
 city: Hastings
-street: "South M 37 Highway"
+street: "South State Highway 37"
 housenumber: 8865
 phone: ""
 opening_hours: ""
