--- a/data/cities/hastings/thornapple-lake-trading-post.yml
+++ b/data/cities/hastings/thornapple-lake-trading-post.yml
@@ -4,7 +4,7 @@ latitude: 42.61111
 longitude: -85.2109
 postcode: "49058"
 city: Hastings
-street: "East Quimby Road"
+street: "East M-79 Highway"
 housenumber: 4005
 phone: ""
 opening_hours: ""
