--- a/data/cities/hastings/walmart-supercenter.yml
+++ b/data/cities/hastings/walmart-supercenter.yml
@@ -4,7 +4,7 @@ latitude: 42.64714
 longitude: -85.32035
 postcode: "49058"
 city: Hastings
-street: "West M 43 Highway"
+street: "West State Highway 43"
 housenumber: 1618
 phone: "+1 269 948 0470"
 opening_hours: "Mo-Su 06:00-23:00"
