--- a/data/cities/middleville/merle-boes.yml
+++ b/data/cities/middleville/merle-boes.yml
@@ -4,7 +4,7 @@ latitude: 42.6318
 longitude: -85.51144
 postcode: "49333"
 city: Middleville
-street: "West M 179 Highway"
+street: "Chief Noonday Road"
 housenumber: 11300
 phone: ""
 opening_hours: ""
