--- a/data/cities/montague/mccormick.yml
+++ b/data/cities/montague/mccormick.yml
@@ -4,7 +4,7 @@ latitude: 43.44415
 longitude: -86.34513
 postcode: "49437"
 city: Montague
-street: "Fruitvale Road"
+street: "West Fruitvale Road"
 housenumber: 4160
 phone: "+1 231 894 0801"
 opening_hours: ""
