--- a/data/cities/montague/waynes-food-mart.yml
+++ b/data/cities/montague/waynes-food-mart.yml
@@ -4,7 +4,7 @@ latitude: 43.45986
 longitude: -86.34569
 postcode: "49437"
 city: Montague
-street: "North US 31"
+street: "Old US-31"
 housenumber: 11094
 phone: ""
 opening_hours: ""
