--- a/data/cities/muskegon/great-lakes-fresh-market.yml
+++ b/data/cities/muskegon/great-lakes-fresh-market.yml
@@ -4,7 +4,7 @@ latitude: 43.23562
 longitude: -86.20226
 postcode: "49442"
 city: Muskegon
-street: "Apple Ave"
+street: "East Apple Avenue"
 housenumber: 1680
 phone: ""
 opening_hours: ""
