--- a/data/cities/muskegon/wesco-7.yml
+++ b/data/cities/muskegon/wesco-7.yml
@@ -4,7 +4,7 @@ latitude: 43.21971
 longitude: -86.26921
 postcode: "49441"
 city: Muskegon
-street: "Wesco"
+street: "West Laketon Avenue"
 housenumber: 1075
 phone: ""
 opening_hours: ""
