--- a/data/cities/okemos/salon-7-and-spa.yml
+++ b/data/cities/okemos/salon-7-and-spa.yml
@@ -1,7 +1,7 @@
-id: 6512319282
-type: node
-latitude: 42.71687
-longitude: -84.42829
+id: 1089758316
+type: way
+latitude: 42.71676
+longitude: -84.42827
 postcode: "48864"
 city: Okemos
 street: "Hamilton Road"
