--- a/data/cities/okemos/sandie-tailoring.yml
+++ b/data/cities/okemos/sandie-tailoring.yml
@@ -1,7 +1,7 @@
-id: 6512319283
-type: node
-latitude: 42.71684
-longitude: -84.4282
+id: 1089758317
+type: way
+latitude: 42.71676
+longitude: -84.42827
 postcode: "48864"
 city: Okemos
 street: "Hamilton Road"
