--- a/data/cities/whitehall/mccormick.yml
+++ b/data/cities/whitehall/mccormick.yml
@@ -4,7 +4,7 @@ latitude: 43.38358
 longitude: -86.28709
 postcode: "49461"
 city: Whitehall
-street: "White Lake Drive"
+street: "West White Lake Drive"
 housenumber: 1845
 phone: "+1 231 894 6100"
 opening_hours: ""
