--- a/data/cities/whitehall/truenorth-stores.yml
+++ b/data/cities/whitehall/truenorth-stores.yml
@@ -4,7 +4,7 @@ latitude: 43.4087
 longitude: -86.32545
 postcode: "49461"
 city: Whitehall
-street: "East Colby Road"
+street: "East Colby Street"
 housenumber: 3385
 phone: "+1 231 893 7151"
 opening_hours: "06:00-23:00"
