--- a/data/cities/whitehall/wesco-3.yml
+++ b/data/cities/whitehall/wesco-3.yml
@@ -4,7 +4,7 @@ latitude: 43.40953
 longitude: -86.31931
 postcode: "49461"
 city: Whitehall
-street: "West Holton-Whitehall Road"
+street: "East Colby Street"
 housenumber: 3090
 phone: ""
 opening_hours: ""
