--- a/data/cities/detroit/family-dollar-29.yml
+++ b/data/cities/detroit/family-dollar-29.yml
@@ -1,11 +1,11 @@
-id: 316618851
-type: way
-latitude: 42.42406
-longitude: -83.27839
+id: 9995446498
+type: node
+latitude: 42.44185
+longitude: -83.25814
 postcode: "48219"
 city: Detroit
-street: "Grand River Avenue"
-housenumber: 24133
+street: "Lahser Road"
+housenumber: 20520
 phone: ""
 opening_hours: ""
 website: ""
