--- a/data/cities/detroit/mobil-mart-35.yml
+++ b/data/cities/detroit/mobil-mart-35.yml
@@ -1,11 +1,11 @@
-id: 8793349421
+id: 9995485160
 type: node
-latitude: 42.39321
-longitude: -83.12249
-postcode: "48238"
+latitude: 42.43083
+longitude: -83.19926
+postcode: "48235"
 city: Detroit
-street: "West Davison Street"
-housenumber: 2600
-phone: "+1 313 865 2427"
+street: "West 7 Mile Road"
+housenumber: 15444
+phone: "+1 313 646 4902"
 opening_hours: "24/7"
 website: ""
