--- a/data/cities/hastings/goldworthys-dowling.yml
+++ b/data/cities/hastings/goldworthys-dowling.yml
@@ -4,7 +4,7 @@ latitude: 42.52462
 longitude: -85.25439
 postcode: "49058"
 city: Hastings
-street: "South M 37 Highway"
+street: "South State Highway 37"
 housenumber: 8860
 phone: "+1 269 721 9500"
 opening_hours: "Mo-Sa 05:00-23:00; Sa 06:00-23:00; Su 07:00-23:00"
