--- a/data/cities/howard-city/j-and-h-family-stores.yml
+++ b/data/cities/howard-city/j-and-h-family-stores.yml
@@ -4,7 +4,7 @@ latitude: 43.39515
 longitude: -85.47635
 postcode: "49329"
 city: Howard City
-street: "West Shaw"
+street: "West Shaw Street"
 housenumber: 580
 phone: "+1 231 937 5189"
 opening_hours: ""
