--- a/data/cities/ionia/dans-bike-shop.yml
+++ b/data/cities/ionia/dans-bike-shop.yml
@@ -7,5 +7,5 @@ city: Ionia
 street: "West Main Street"
 housenumber: 350
 phone: ""
-opening_hours: ""
+opening_hours: "Mo open by appointment;Tu-Fr 10:00-19:00; Sa 10:00-16:00; Su off"
 website: ""
