--- a/data/cities/north-muskegon/van-kam-truck-and-trailer.yml
+++ b/data/cities/north-muskegon/van-kam-truck-and-trailer.yml
@@ -4,7 +4,7 @@ latitude: 43.27613
 longitude: -86.2608
 postcode: "49445"
 city: North Muskegon
-street: "North Whitehall Road"
+street: "Whitehall Road"
 housenumber: 1316
 phone: ""
 opening_hours: "Mo-Sa 08:00-17:30"
