--- a/data/cities/prairieville/express-stop.yml
+++ b/data/cities/prairieville/express-stop.yml
@@ -4,7 +4,7 @@ latitude: 42.50104
 longitude: -85.45464
 postcode: "49046"
 city: Prairieville
-street: "Norris Road"
+street: "South Norris Road"
 housenumber: 10477
 phone: ""
 opening_hours: ""
