--- a/data/cities/whitehall/walmart-supercenter.yml
+++ b/data/cities/whitehall/walmart-supercenter.yml
@@ -4,7 +4,7 @@ latitude: 43.40775
 longitude: -86.31034
 postcode: "49461"
 city: Whitehall
-street: "Holton-Whitehall Road"
+street: "West Holton-Whitehall Road"
 housenumber: 2755
 phone: "+1-231-893-5477"
 opening_hours: "Mo-Su 06:00-23:00"
