update content and data

--- a/data/cities/detroit/bp-shop-11.yml
+++ b/data/cities/detroit/bp-shop-11.yml
@@ -1,11 +1,11 @@
-id: 8758120796
+id: 8758151034
 type: node
-latitude: 42.38719
-longitude: -83.02024
+latitude: 42.40842
+longitude: -82.9958
 postcode: "48213"
 city: Detroit
-street: "Van Dyke Street"
-housenumber: 6420
-phone: "+1 313 571 3333"
+street: "Gratiot Avenue"
+housenumber: 11155
+phone: "+1 313 521 6047"
 opening_hours: "24/7"
 website: ""
