--- a/data/cities/detroit/bp-shop-18.yml
+++ b/data/cities/detroit/bp-shop-18.yml
@@ -1,11 +1,11 @@
-id: 8786626626
+id: 8786626711
 type: node
-latitude: 42.41564
-longitude: -83.19879
-postcode: "48235"
+latitude: 42.43099
+longitude: -83.16131
+postcode: "48221"
 city: Detroit
-street: "West McNichols Road"
-housenumber: 15445
-phone: "+1 313 835 9335"
-opening_hours: "24/7"
+street: "West 7 Mile Road"
+housenumber: 10001
+phone: ""
+opening_hours: ""
 website: ""
