--- a/data/cities/detroit/bp-shop-21.yml
+++ b/data/cities/detroit/bp-shop-21.yml
@@ -1,11 +1,11 @@
-id: 8786626832
+id: 8786626853
 type: node
-latitude: 42.43064
-longitude: -83.20573
+latitude: 42.44404
+longitude: -83.21316
 postcode: "48235"
 city: Detroit
-street: "West 7 Mile Road"
-housenumber: 16000
-phone: "+1 313 342 4038"
-opening_hours: "24/7"
-website: "https://map.bp.com/en-US/US/gas-station/detroit/bp/39402767991004823500100000000000"
+street: "West 8 Mile Road"
+housenumber: 17151
+phone: "+1 313 310 5440"
+opening_hours: ""
+website: ""
