--- a/data/cities/detroit/bp-shop-25.yml
+++ b/data/cities/detroit/bp-shop-25.yml
@@ -1,11 +1,11 @@
-id: 8786626992
+id: 8786627050
 type: node
-latitude: 42.40244
-longitude: -83.13968
-postcode: "48238"
+latitude: 42.4024
+longitude: -83.17956
+postcode: "48227"
 city: Detroit
-street: "Livernois Avenue"
-housenumber: 15230
-phone: "+1 313 342 8039"
-opening_hours: "24/7"
+street: "Fenkell Street"
+housenumber: 13600
+phone: "+1 313 272 8080"
+opening_hours: ""
 website: ""
