--- a/data/cities/detroit/bp-shop-28.yml
+++ b/data/cities/detroit/bp-shop-28.yml
@@ -1,11 +1,11 @@
-id: 8787182839
+id: 8787254029
 type: node
-latitude: 42.43343
-longitude: -83.06357
-postcode: "48234"
+latitude: 42.40582
+longitude: -82.95972
+postcode: "48224"
 city: Detroit
-street: "East 7 Mile Road"
-housenumber: 4041
-phone: "+1 313 891 0032"
+street: "East Outer Drive"
+housenumber: 10601
+phone: "+1 313 371 4777"
 opening_hours: "24/7"
 website: ""
