--- a/data/cities/detroit/bp-shop-30.yml
+++ b/data/cities/detroit/bp-shop-30.yml
@@ -1,11 +1,11 @@
-id: 8788711522
+id: 8791513466
 type: node
-latitude: 42.37195
-longitude: -83.21582
-postcode: "48227"
+latitude: 42.35784
+longitude: -83.19658
+postcode: "48228"
 city: Detroit
-street: "Plymouth Road"
-housenumber: 17707
-phone: "+1 313 837 6300"
+street: "Joy Road"
+housenumber: 15435
+phone: "+1 313 582 6792"
 opening_hours: "24/7"
 website: ""
