--- a/data/cities/detroit/bp-shop-32.yml
+++ b/data/cities/detroit/bp-shop-32.yml
@@ -1,11 +1,11 @@
-id: 8791513486
+id: 8791625994
 type: node
-latitude: 42.35737
-longitude: -83.21724
+latitude: 42.3435
+longitude: -83.235
 postcode: "48228"
 city: Detroit
-street: "Joy Road"
-housenumber: 18137
-phone: "+1 313 271 5976"
+street: "West Warren Avenue"
+housenumber: 19840
+phone: "+1 313 271 2450"
 opening_hours: "24/7"
 website: ""
