--- a/data/cities/detroit/bp-shop-33.yml
+++ b/data/cities/detroit/bp-shop-33.yml
@@ -1,11 +1,11 @@
-id: 8791625994
+id: 8793316778
 type: node
-latitude: 42.3435
-longitude: -83.235
-postcode: "48228"
+latitude: 42.3951
+longitude: -83.14044
+postcode: "48238"
 city: Detroit
-street: "West Warren Avenue"
-housenumber: 19840
-phone: "+1 313 271 2450"
-opening_hours: "24/7"
+street: "Livernois Avenue"
+housenumber: 14481
+phone: ""
+opening_hours: ""
 website: ""
