--- a/data/cities/detroit/bp-shop-36.yml
+++ b/data/cities/detroit/bp-shop-36.yml
@@ -1,11 +1,11 @@
-id: 316896172
+id: 323369483
 type: way
-latitude: 42.40093
-longitude: -83.21745
-postcode: "48227"
+latitude: 42.34207
+longitude: -83.26192
+postcode: "48239"
 city: Detroit
-street: "Grand River Avenue"
-housenumber: 17776
-phone: "+1 313 270 2071"
+street: "West Warren Avenue"
+housenumber: 22640
+phone: "+1 313 562 3286"
 opening_hours: "24/7"
 website: ""
