--- a/data/cities/detroit/bp-shop-37.yml
+++ b/data/cities/detroit/bp-shop-37.yml
@@ -1,11 +1,11 @@
-id: 323369483
+id: 379399433
 type: way
-latitude: 42.34207
-longitude: -83.26192
-postcode: "48239"
+latitude: 42.35064
+longitude: -83.03389
+postcode: "48207"
 city: Detroit
-street: "West Warren Avenue"
-housenumber: 22640
-phone: "+1 313 562 3286"
-opening_hours: "24/7"
+street: "Gratiot Avenue"
+housenumber: 2153
+phone: "+1 313 446 6914"
+opening_hours: ""
 website: ""
