--- a/data/cities/detroit/bp-shop-6.yml
+++ b/data/cities/detroit/bp-shop-6.yml
@@ -1,11 +1,11 @@
-id: 8751504274
+id: 8755353123
 type: node
-latitude: 42.35061
-longitude: -83.03384
-postcode: "48207"
+latitude: 42.31278
+longitude: -83.09002
+postcode: "48209"
 city: Detroit
-street: "Gratiot Avenue"
-housenumber: 2153
-phone: "+1 313 446 6914"
+street: "West Fort Street"
+housenumber: 4276
+phone: ""
 opening_hours: ""
 website: ""
