--- a/data/cities/grand-rapids/hotel-venus-salon.yml
+++ b/data/cities/grand-rapids/hotel-venus-salon.yml
@@ -8,4 +8,4 @@ street: "Cherry Street Southeast"
 housenumber: 953
 phone: "+1-616-456-6604"
 opening_hours: ""
-website: "hotelvenussalon.net"
+website: "http://hotelvenussalon.net"
