--- a/data/cities/grand-rapids/mpx-glass.yml
+++ b/data/cities/grand-rapids/mpx-glass.yml
@@ -8,4 +8,4 @@ street: "Melita Avenue Northeast"
 housenumber: 2029
 phone: "+1-616-389-3771"
 opening_hours: ""
-website: "nigelmorford.wix.com/mpxglass"
+website: "http://nigelmorford.wix.com/mpxglass"
