--- a/data/cities/grand-rapids/smittys-speciality-beverage.yml
+++ b/data/cities/grand-rapids/smittys-speciality-beverage.yml
@@ -8,4 +8,4 @@ street: "Lake Drive Southeast"
 housenumber: 1489
 phone: "+1-616-451-0640"
 opening_hours: ""
-website: "smittysspecialtybeverage.com"
+website: "http://smittysspecialtybeverage.com"
