--- a/data/cities/grand-rapids/surplus-industrial-supply.yml
+++ b/data/cities/grand-rapids/surplus-industrial-supply.yml
@@ -8,4 +8,4 @@ street: "Scribner Avenue Northwest"
 housenumber: 1310
 phone: "+1-616-451-4100"
 opening_hours: "Mo-Fr 08:00-16:30"
-website: "www.surplusindustrialsupply.com"
+website: "http://www.surplusindustrialsupply.com"
