--- a/data/cities/norton-shores/hodgepodge-bakehousee.yml
+++ b/data/cities/norton-shores/hodgepodge-bakehousee.yml
@@ -7,5 +7,5 @@ city: Norton Shores
 street: "McCracken Street"
 housenumber: 3361
 phone: "+1-231-755-8800"
-opening_hours: "Mo-Fr 7:00-16:00, Sa 8:00-14:00, Su Closed"
+opening_hours: "Mo-Fr 07:00-16:00; Sa 08:00-14:00; Su closed"
 website: ""
