--- a/data/cities/barryton/hometown-grocery.yml
+++ b/data/cities/barryton/hometown-grocery.yml
@@ -4,7 +4,7 @@ latitude: 43.7562
 longitude: -85.14817
 postcode: "49305"
 city: Barryton
-street: "North 30th Avenue"
+street: "30th Avenue"
 housenumber: 20009
 phone: ""
 opening_hours: ""
