--- a/data/cities/canadian-lakes/ace-hardware.yml
+++ b/data/cities/canadian-lakes/ace-hardware.yml
@@ -8,4 +8,4 @@ street: "100th Avenue"
 housenumber: 8370
 phone: "+1-231-972-1319"
 opening_hours: ""
-website: "www.acehardware.com"
+website: "http://www.acehardware.com"
