--- a/data/cities/cannonsburg/cannonsburg-grist-mill.yml
+++ b/data/cities/cannonsburg/cannonsburg-grist-mill.yml
@@ -8,4 +8,4 @@ street: "Cannonsburg Road Northeast"
 housenumber: 8000
 phone: ""
 opening_hours: ""
-website: "cannonsburgvillage.com"
+website: "http://cannonsburgvillage.com"
