--- a/data/cities/detroit/bp-shop-12.yml
+++ b/data/cities/detroit/bp-shop-12.yml
@@ -1,11 +1,11 @@
-id: 8758151034
+id: 8758186661
 type: node
-latitude: 42.40842
-longitude: -82.9958
-postcode: "48213"
+latitude: 42.42963
+longitude: -83.22481
+postcode: "48219"
 city: Detroit
-street: "Gratiot Avenue"
-housenumber: 11155
-phone: "+1 313 521 6047"
-opening_hours: "24/7"
+street: "West 7 Mile Road"
+housenumber: 18525
+phone: ""
+opening_hours: ""
 website: ""
