--- a/data/cities/detroit/bp-shop-13.yml
+++ b/data/cities/detroit/bp-shop-13.yml
@@ -1,11 +1,11 @@
-id: 8758186661
+id: 8758464999
 type: node
-latitude: 42.42963
-longitude: -83.22481
-postcode: "48219"
+latitude: 42.36414
+longitude: -82.97552
+postcode: "48214"
 city: Detroit
-street: "West 7 Mile Road"
-housenumber: 18525
-phone: ""
-opening_hours: ""
+street: "East Jefferson Avenue"
+housenumber: 10736
+phone: "+1 313 821 5894"
+opening_hours: "24/7"
 website: ""
