--- a/data/cities/detroit/bp-shop-14.yml
+++ b/data/cities/detroit/bp-shop-14.yml
@@ -1,11 +1,11 @@
-id: 8758464999
+id: 8778814363
 type: node
-latitude: 42.36414
-longitude: -82.97552
-postcode: "48214"
+latitude: 42.28873
+longitude: -83.16592
+postcode: "48217"
 city: Detroit
-street: "East Jefferson Avenue"
-housenumber: 10736
-phone: "+1 313 821 5894"
+street: "South Schaefer Highway"
+housenumber: 335
+phone: "+1 313 842 8500"
 opening_hours: "24/7"
 website: ""
