--- a/data/cities/detroit/bp-shop-15.yml
+++ b/data/cities/detroit/bp-shop-15.yml
@@ -1,11 +1,11 @@
-id: 8778814363
+id: 8783729034
 type: node
-latitude: 42.28873
-longitude: -83.16592
-postcode: "48217"
+latitude: 42.42833
+longitude: -83.28571
+postcode: "48219"
 city: Detroit
-street: "South Schaefer Highway"
-housenumber: 335
-phone: "+1 313 842 8500"
+street: "West 7 Mile Road"
+housenumber: 24761
+phone: "+1 810 695 1436"
 opening_hours: "24/7"
 website: ""
