--- a/data/cities/detroit/bp-shop-16.yml
+++ b/data/cities/detroit/bp-shop-16.yml
@@ -1,11 +1,11 @@
-id: 8783729034
+id: 8783729066
 type: node
-latitude: 42.42833
-longitude: -83.28571
+latitude: 42.4293
+longitude: -83.27711
 postcode: "48219"
 city: Detroit
-street: "West 7 Mile Road"
-housenumber: 24761
-phone: "+1 810 695 1436"
+street: "Telegraph Road"
+housenumber: 19100
+phone: "+1 313 603 2639"
 opening_hours: "24/7"
 website: ""
