--- a/data/cities/detroit/bp-shop-17.yml
+++ b/data/cities/detroit/bp-shop-17.yml
@@ -1,11 +1,11 @@
-id: 8783729066
+id: 8786626626
 type: node
-latitude: 42.4293
-longitude: -83.27711
-postcode: "48219"
+latitude: 42.41564
+longitude: -83.19879
+postcode: "48235"
 city: Detroit
-street: "Telegraph Road"
-housenumber: 19100
-phone: "+1 313 603 2639"
+street: "West McNichols Road"
+housenumber: 15445
+phone: "+1 313 835 9335"
 opening_hours: "24/7"
 website: ""
