--- a/data/cities/detroit/bp-shop-26.yml
+++ b/data/cities/detroit/bp-shop-26.yml
@@ -1,11 +1,11 @@
-id: 8786627050
+id: 8787170880
 type: node
-latitude: 42.4024
-longitude: -83.17956
-postcode: "48227"
+latitude: 42.44543
+longitude: -83.02413
+postcode: "48234"
 city: Detroit
-street: "Fenkell Street"
-housenumber: 13600
-phone: "+1 313 272 8080"
+street: "Van Dyke Avenue"
+housenumber: 20216
+phone: ""
 opening_hours: ""
 website: ""
