--- a/data/cities/detroit/bp-shop-27.yml
+++ b/data/cities/detroit/bp-shop-27.yml
@@ -1,11 +1,11 @@
-id: 8787170880
+id: 8787182839
 type: node
-latitude: 42.44543
-longitude: -83.02413
+latitude: 42.43343
+longitude: -83.06357
 postcode: "48234"
 city: Detroit
-street: "Van Dyke Avenue"
-housenumber: 20216
-phone: ""
-opening_hours: ""
+street: "East 7 Mile Road"
+housenumber: 4041
+phone: "+1 313 891 0032"
+opening_hours: "24/7"
 website: ""
