--- a/data/cities/detroit/bp-shop-29.yml
+++ b/data/cities/detroit/bp-shop-29.yml
@@ -1,11 +1,11 @@
-id: 8787254029
+id: 8788711522
 type: node
-latitude: 42.40582
-longitude: -82.95972
-postcode: "48224"
+latitude: 42.37195
+longitude: -83.21582
+postcode: "48227"
 city: Detroit
-street: "East Outer Drive"
-housenumber: 10601
-phone: "+1 313 371 4777"
+street: "Plymouth Road"
+housenumber: 17707
+phone: "+1 313 837 6300"
 opening_hours: "24/7"
 website: ""
