--- a/data/cities/detroit/bp-shop-34.yml
+++ b/data/cities/detroit/bp-shop-34.yml
@@ -1,11 +1,11 @@
-id: 8793316778
+id: 8793366477
 type: node
-latitude: 42.3951
-longitude: -83.14044
-postcode: "48238"
+latitude: 42.32931
+longitude: -83.22431
+postcode: "48228"
 city: Detroit
-street: "Livernois Avenue"
-housenumber: 14481
-phone: ""
-opening_hours: ""
+street: "Ford Road"
+housenumber: 18900
+phone: "+1 313 240 8530"
+opening_hours: "24/7"
 website: ""
