--- a/data/cities/detroit/bp-shop-35.yml
+++ b/data/cities/detroit/bp-shop-35.yml
@@ -1,11 +1,11 @@
-id: 8793366477
-type: node
-latitude: 42.32931
-longitude: -83.22431
-postcode: "48228"
+id: 316896172
+type: way
+latitude: 42.40093
+longitude: -83.21745
+postcode: "48227"
 city: Detroit
-street: "Ford Road"
-housenumber: 18900
-phone: "+1 313 240 8530"
+street: "Grand River Avenue"
+housenumber: 17776
+phone: "+1 313 270 2071"
 opening_hours: "24/7"
 website: ""
