--- a/data/cities/detroit/bp-shop-7.yml
+++ b/data/cities/detroit/bp-shop-7.yml
@@ -1,11 +1,11 @@
-id: 8755353123
+id: 8757665520
 type: node
-latitude: 42.31278
-longitude: -83.09002
-postcode: "48209"
+latitude: 42.3365
+longitude: -83.12507
+postcode: "48210"
 city: Detroit
-street: "West Fort Street"
-housenumber: 4276
-phone: ""
-opening_hours: ""
+street: "Livernois Avenue"
+housenumber: 5015
+phone: "+1 313 898 8722"
+opening_hours: "24/7"
 website: ""
