--- a/data/cities/detroit/bp-shop-9.yml
+++ b/data/cities/detroit/bp-shop-9.yml
@@ -1,11 +1,11 @@
-id: 8757665555
+id: 8757822227
 type: node
-latitude: 42.32621
-longitude: -83.11617
-postcode: "48210"
+latitude: 42.41821
+longitude: -83.08151
+postcode: "48212"
 city: Detroit
-street: "Livernois Avenue"
-housenumber: 3278
-phone: "+1 313 974 7272"
+street: "East McNichols Road"
+housenumber: 1900
+phone: ""
 opening_hours: ""
 website: ""
