--- a/data/cities/detroit/motor-city-liquor.yml
+++ b/data/cities/detroit/motor-city-liquor.yml
@@ -1,7 +1,7 @@
-id: 7998554959
-type: node
-latitude: 42.3524
-longitude: -83.03255
+id: 379399430
+type: way
+latitude: 42.35248
+longitude: -83.0327
 postcode: "48207"
 city: Detroit
 street: "Gratiot Avenue"
