--- a/data/cities/grand-rapids/all-city-kicks.yml
+++ b/data/cities/grand-rapids/all-city-kicks.yml
@@ -8,4 +8,4 @@ street: "Wealthy Street Southeast"
 housenumber: 1500
 phone: "+1-616-242-1307"
 opening_hours: ""
-website: "ackgr.com"
+website: "http://ackgr.com"
