--- a/data/cities/grand-rapids/eastown-antiques.yml
+++ b/data/cities/grand-rapids/eastown-antiques.yml
@@ -8,4 +8,4 @@ street: "Lake Drive Southeast"
 housenumber: 1515
 phone: "+1-616-776-1076"
 opening_hours: ""
-website: "eastownantiques.com"
+website: "http://eastownantiques.com"
