--- a/data/cities/grand-rapids/forest-hills-barber-shop.yml
+++ b/data/cities/grand-rapids/forest-hills-barber-shop.yml
@@ -8,4 +8,4 @@ street: "Forest Hill Avenue Southeast"
 housenumber: 880
 phone: "+1 (616) 977-4808"
 opening_hours: ""
-website: "foresthillsbarber.com"
+website: "http://foresthillsbarber.com"
