--- a/data/cities/grand-rapids/kool-chevrolet.yml
+++ b/data/cities/grand-rapids/kool-chevrolet.yml
@@ -8,4 +8,4 @@ street: "Plainfield Avenue Northeast"
 housenumber: 3770
 phone: "+1 (866) 544-0318"
 opening_hours: "Mo 07:00-20:00; Tu 07:00-17:30; We 07:00-20:00; Th-Fr 07:00-17:30; Sa 08:00-13:00"
-website: "www.koolchevy.com"
+website: "http://www.koolchevy.com"
