--- a/data/cities/grand-rapids/kool-toyota.yml
+++ b/data/cities/grand-rapids/kool-toyota.yml
@@ -8,4 +8,4 @@ street: "Plainfield Avenue Northeast"
 housenumber: 3870
 phone: "+1 (616) 364-9700"
 opening_hours: "Mo 08:00-20:00; Tu 08:00-18:00; We 08:00-20:00; Th-Fr 08:00-18:00; Sa 08:00-13:00"
-website: "www.kooltoyota.com"
+website: "http://www.kooltoyota.com"
