--- a/data/cities/grand-rapids/rise-smoke-vape-shop-28th-st.yml
+++ b/data/cities/grand-rapids/rise-smoke-vape-shop-28th-st.yml
@@ -8,4 +8,4 @@ street: "28th Street Southeast"
 housenumber: 3839
 phone: "+1-616-419-3979"
 opening_hours: ""
-website: "rise-smokevape-shop-28th-st.business.site"
+website: ""
