--- a/data/cities/grand-rapids/the-new-yorker-mens-wear.yml
+++ b/data/cities/grand-rapids/the-new-yorker-mens-wear.yml
@@ -8,4 +8,4 @@ street: "Wealthy Street Southeast"
 housenumber: 1511
 phone: "+1-616-459-5805"
 opening_hours: ""
-website: "thenewyorkermenswear.com"
+website: "http://thenewyorkermenswear.com"
