update content and data

--- a/data/cities/beulah/ez-mart.yml
+++ b/data/cities/beulah/ez-mart.yml
@@ -1,7 +1,7 @@
-id: 7855658327
-type: node
-latitude: 44.63303
-longitude: -86.09071
+id: 842035442
+type: way
+latitude: 44.6329
+longitude: -86.09067
 postcode: "49617"
 city: Beulah
 street: "North Benzie Boulevard"
