--- a/data/cities/northport/barbs-bakery.yml
+++ b/data/cities/northport/barbs-bakery.yml
@@ -1,8 +1,8 @@
-id: 3896542158
-type: node
-latitude: 45.13037
-longitude: -85.61565
-postcode: ""
+id: 603911958
+type: way
+latitude: 45.1304
+longitude: -85.61569
+postcode: "49670"
 city: Northport
 street: "Mill Street"
 housenumber: 112
