--- a/data/cities/northport/deeps-corner-store.yml
+++ b/data/cities/northport/deeps-corner-store.yml
@@ -1,7 +1,7 @@
-id: 2316613841
-type: node
-latitude: 45.12957
-longitude: -85.61687
+id: 603911964
+type: way
+latitude: 45.12953
+longitude: -85.61684
 postcode: "49670"
 city: Northport
 street: "West Nagonaba Street"
