update content and data

--- a/data/cities/saranac/dollar-general.yml
+++ b/data/cities/saranac/dollar-general.yml
@@ -4,7 +4,7 @@ latitude: 42.92913
 longitude: -85.21364
 postcode: "48881"
 city: Saranac
-street: "South Bridge Street"
+street: "Bridge Street"
 housenumber: 17
 phone: ""
 opening_hours: ""
