--- a/data/cities/saranac/saranac-party-store.yml
+++ b/data/cities/saranac/saranac-party-store.yml
@@ -4,7 +4,7 @@ latitude: 42.92882
 longitude: -85.21296
 postcode: "48881"
 city: Saranac
-street: "South Bridge Street"
+street: "Bridge Street"
 housenumber: 38
 phone: ""
 opening_hours: ""
