--- a/data/cities/sterling-heights/dream-home-collection.yml
+++ b/data/cities/sterling-heights/dream-home-collection.yml
@@ -1,11 +1,11 @@
-id: 8490596109
+id: 10043895266
 type: node
-latitude: 42.54991
-longitude: -83.06873
+latitude: 42.55228
+longitude: -83.0706
 postcode: "48310"
 city: Sterling Heights
 street: "15 Mile Road"
-housenumber: 4050
-phone: ""
+housenumber: 3815
+phone: "+1 586 275 2810"
 opening_hours: ""
 website: ""
