update content and data

--- a/data/cities/lansing/michaels.yml
+++ b/data/cities/lansing/michaels.yml
@@ -2,7 +2,7 @@ id: 154890792
 type: way
 latitude: 42.73969
 longitude: -84.50554
-postcode: "48912-5206"
+postcode: "48912"
 city: Lansing
 street: "Frandor Avenue"
 housenumber: 540
