--- a/data/cities/sterling-heights/walgreens-2.yml
+++ b/data/cities/sterling-heights/walgreens-2.yml
@@ -1,11 +1,11 @@
-id: 545791041
+id: 914028429
 type: way
-latitude: 42.61394
-longitude: -82.99165
-postcode: "48313"
+latitude: 42.61098
+longitude: -83.03064
+postcode: "48314"
 city: Sterling Heights
-street: "Canal Road"
-housenumber: 13700
+street: "Van Dyke Avenue"
+housenumber: 43250
 phone: ""
 opening_hours: ""
 website: ""
