--- a/data/cities/okemos/breadsmith.yml
+++ b/data/cities/okemos/breadsmith.yml
@@ -5,7 +5,7 @@ longitude: -84.4281
 postcode: "48864"
 city: Okemos
 street: "Okemos Road"
-housenumber: 4901 #4
+housenumber: 4901
 phone: "+1 517 347 1810"
 opening_hours: "Mo-Fr 07:00-18:00; Sa 07:00-17:00; Su 08:00-16:00"
 website: "https://www.breadsmith.com/"
