--- a/data/cities/royal-oak/bright-ideas-modern-home.yml
+++ b/data/cities/royal-oak/bright-ideas-modern-home.yml
@@ -7,5 +7,5 @@ city: Royal Oak
 street: "South Main Street"
 housenumber: 905A
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 11:00-19:00; Sa 10:00-18:00"
 website: ""
