update content and data

--- a/data/cities/allendale/fusion-hair-design.yml
+++ b/data/cities/allendale/fusion-hair-design.yml
@@ -1,11 +1,11 @@
-id: 732348052
+id: 1103270583
 type: way
-latitude: 42.97171
-longitude: -85.9435
+latitude: 42.97094
+longitude: -85.94312
 postcode: "49401"
 city: Allendale
 street: "Lake Michigan Drive"
-housenumber: 6380
-phone: ""
+housenumber: 6370
+phone: "+16168951442"
 opening_hours: ""
 website: ""
