--- a/data/cities/detroit/the-hub.yml
+++ b/data/cities/detroit/the-hub.yml
@@ -7,5 +7,5 @@ city: Detroit
 street: "Cass Avenue"
 housenumber: 3611
 phone: "+1-313-833-0813"
-opening_hours: "Tu-Sa 10:00-18:00"
+opening_hours: "Tu-Sa 12:00-18:00; Su 14:30-17:00"
 website: "http://thehubofdetroit.org/"
