update content and data

--- a/data/cities/traverse-city/shell.yml
+++ b/data/cities/traverse-city/shell.yml
@@ -1,11 +1,11 @@
-id: 7857936706
+id: 7857936745
 type: node
-latitude: 44.71608
-longitude: -85.55619
-postcode: "49684"
+latitude: 44.7157
+longitude: -85.59466
+postcode: "49686"
 city: Traverse City
-street: "East Hammond Road"
-housenumber: 1031
+street: "North Garfield Avenue"
+housenumber: 2020
 phone: ""
 opening_hours: ""
 website: ""
