--- a/data/cities/traverse-city/shell-2.yml
+++ b/data/cities/traverse-city/shell-2.yml
@@ -1,11 +1,11 @@
-id: 7857936745
-type: node
-latitude: 44.7157
-longitude: -85.59466
-postcode: "49686"
+id: 249806774
+type: way
+latitude: 44.72225
+longitude: -85.64535
+postcode: "49684"
 city: Traverse City
-street: "North Garfield Avenue"
-housenumber: 2020
+street: "North US 31 South"
+housenumber: 2408
 phone: ""
 opening_hours: ""
 website: ""
