--- a/data/cities/traverse-city/shell-3.yml
+++ b/data/cities/traverse-city/shell-3.yml
@@ -1,11 +1,11 @@
-id: 249806774
+id: 317387494
 type: way
-latitude: 44.72225
-longitude: -85.64535
-postcode: "49684"
+latitude: 44.7597
+longitude: -85.61328
+postcode: "49686"
 city: Traverse City
-street: "North US 31 South"
-housenumber: 2408
+street: "East Eighth Street"
+housenumber: 501
 phone: ""
 opening_hours: ""
 website: ""
