--- a/data/cities/traverse-city/shell-4.yml
+++ b/data/cities/traverse-city/shell-4.yml
@@ -1,11 +1,11 @@
-id: 317387494
+id: 325244142
 type: way
-latitude: 44.7597
-longitude: -85.61328
-postcode: "49686"
+latitude: 44.71615
+longitude: -85.55635
+postcode: "49684"
 city: Traverse City
-street: "East Eighth Street"
-housenumber: 501
+street: "East Hammond Road"
+housenumber: 1031
 phone: ""
 opening_hours: ""
 website: ""
