--- a/data/cities/troy/oakland-mall.yml
+++ b/data/cities/troy/oakland-mall.yml
@@ -7,5 +7,5 @@ city: Troy
 street: "West 14 Mile Road"
 housenumber: 41
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 10:00-20:00; Su 12:00-18:00"
 website: ""
