update content and data

--- a/data/cities/ann-arbor/motivation.yml
+++ b/data/cities/ann-arbor/motivation.yml
@@ -7,5 +7,5 @@ city: Ann Arbor
 street: "South University Avenue"
 housenumber: 1203
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Th 12:00-19:00; Fr,Sa 12:00-19:00; Su 12:00-17:00"
 website: ""
