--- a/data/cities/kalamazoo/meijer-2.yml
+++ b/data/cities/kalamazoo/meijer-2.yml
@@ -1,11 +1,11 @@
-id: 258146159
+id: 157108795
 type: way
-latitude: 42.29916
-longitude: -85.68037
-postcode: "49009"
+latitude: 42.32273
+longitude: -85.51665
+postcode: "49048"
 city: Kalamazoo
-street: "West Main Street"
-housenumber: 6660
-phone: "+1-269-372-9100"
-opening_hours: "open; Dec 25 off"
-website: ""
+street: "Gull Road"
+housenumber: 5800
+phone: "+1-269-382-6250"
+opening_hours: ""
+website: "https://www.meijer.com/"
