--- a/data/cities/grand-rapids/autozone-2.yml
+++ b/data/cities/grand-rapids/autozone-2.yml
@@ -1,11 +1,11 @@
-id: 940706689
+id: 473860945
 type: way
-latitude: 42.98365
-longitude: -85.63899
-postcode: "49503"
+latitude: 43.02546
+longitude: -85.63216
+postcode: "49525"
 city: Grand Rapids
-street: "Fuller Avenue Northeast"
-housenumber: 1112
-phone: "+1 (616) 742-9965"
-opening_hours: "Mo-Sa 07:30-22:00; Su 08:30-21:00"
+street: "Plainfield Avenue Northeast"
+housenumber: 3434
+phone: "+1 (616) 447-0323"
+opening_hours: "Mo-Sa 07:30-21:00; Su 08:00-20:00"
 website: "https://www.autozone.com/"
