--- a/data/cities/grand-rapids/autozone.yml
+++ b/data/cities/grand-rapids/autozone.yml
@@ -1,11 +1,11 @@
-id: 473860945
-type: way
-latitude: 43.02546
-longitude: -85.63216
-postcode: "49525"
+id: 10141394218
+type: node
+latitude: 42.98549
+longitude: -85.68343
+postcode: "49504"
 city: Grand Rapids
-street: "Plainfield Avenue Northeast"
-housenumber: 3434
-phone: "+1 (616) 447-0323"
-opening_hours: "Mo-Sa 07:30-21:00; Su 08:00-20:00"
-website: "https://www.autozone.com/"
+street: "Leonard Street Northwest"
+housenumber: 619
+phone: "+1 (616) 742-1100"
+opening_hours: "Su 08:00-21:00; Mo-Fr 07:30-21:00; Sa 08:00-21:00"
+website: "www.autozone.com"
