--- a/data/cities/kalamazoo/meijer.yml
+++ b/data/cities/kalamazoo/meijer.yml
@@ -1,11 +1,11 @@
-id: 157108795
-type: way
-latitude: 42.32273
-longitude: -85.51665
+id: 8363126959
+type: node
+latitude: 42.32589
+longitude: -85.51457
 postcode: "49048"
 city: Kalamazoo
 street: "Gull Road"
 housenumber: 5800
-phone: "+1-269-382-6250"
+phone: ""
 opening_hours: ""
-website: "https://www.meijer.com/"
+website: ""
