--- a/data/cities/leonard/lakeville-cleaners.yml
+++ b/data/cities/leonard/lakeville-cleaners.yml
@@ -7,5 +7,5 @@ city: Leonard
 street: "Rochester Road"
 housenumber: 713
 phone: "+1-586-752-9565"
-opening_hours: "Mo-Tu 7am-7pm Wed 7am-5pm Th-Fr 7am-7pm Sat 9am-12pm Sun CLOSED"
+opening_hours: "Mo,Tu,Th,Fr 07:00-19:00; We 07:00-17:00; Sa 09:00-12:00; Su off"
 website: ""
