--- a/data/cities/okemos/dennys-central-park-bicycles.yml
+++ b/data/cities/okemos/dennys-central-park-bicycles.yml
@@ -7,5 +7,5 @@ city: Okemos
 street: "Central Park Drive"
 housenumber: 1805
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Tu,Th-Sa 10:00-18:00; We 09:00-17:00"
 website: ""
