--- a/data/cities/sault-sainte-marie/timber-ridge-resort.yml
+++ b/data/cities/sault-sainte-marie/timber-ridge-resort.yml
@@ -1,7 +1,7 @@
-id: 7798528548
-type: node
-latitude: 46.3347
-longitude: -84.12054
+id: 1108253762
+type: way
+latitude: 46.33481
+longitude: -84.12049
 postcode: "49783"
 city: Sault Sainte Marie
 street: "South Homestead Road"
