update content and data

--- a/data/cities/dearborn/cvs-pharmacy-2.yml
+++ b/data/cities/dearborn/cvs-pharmacy-2.yml
@@ -1,11 +1,11 @@
-id: 673091829
+id: 443392472
 type: way
-latitude: 42.34405
-longitude: -83.16173
-postcode: "48126"
+latitude: 42.29269
+longitude: -83.27091
+postcode: "48124"
 city: Dearborn
-street: "West Warren Avenue"
-housenumber: 10335
+street: "South Telegraph Road"
+housenumber: 2701
 phone: ""
 opening_hours: ""
 website: ""
