--- a/data/cities/fremont/ez-mart.yml
+++ b/data/cities/fremont/ez-mart.yml
@@ -1,7 +1,7 @@
-id: 7976923951
-type: node
-latitude: 43.4668
-longitude: -85.96317
+id: 1111196537
+type: way
+latitude: 43.46685
+longitude: -85.96325
 postcode: "49412"
 city: Fremont
 street: "West Main Street"
