--- a/data/cities/dearborn/cvs-pharmacy.yml
+++ b/data/cities/dearborn/cvs-pharmacy.yml
@@ -1,11 +1,11 @@
-id: 443392472
-type: way
-latitude: 42.29269
-longitude: -83.27091
-postcode: "48124"
+id: 9416512160
+type: node
+latitude: 42.28482
+longitude: -83.23336
+postcode: ""
 city: Dearborn
-street: "South Telegraph Road"
-housenumber: 2701
-phone: ""
+street: "West Outer Drive"
+housenumber: 22060
+phone: "+1 313 274-7651"
 opening_hours: ""
-website: ""
+website: "https://www.cvs.com/store-locator/dearborn-mi-pharmacies/22060-outer-drive-dearborn-mi-48124/storeid=8152"
