--- a/data/cities/lansing/capital-city-market.yml
+++ b/data/cities/lansing/capital-city-market.yml
@@ -7,5 +7,5 @@ city: Lansing
 street: "East Michigan Avenue"
 housenumber: 600
 phone: "+1-517-333-3000"
-opening_hours: "Mo-Th 08:00-22:00; Fr-Su 07:00-22:00; Mo,We 07:00-08:00 open Essential Service Workers and Meijer Team Members; Tu,Th 07:00-08:00 open Guests with Health Conditions"
+opening_hours: "10:00-22:00"
 website: "https://www.capitalcitymarket.com/"
