--- a/data/cities/marshall/the-green-scene-of-marshall.yml
+++ b/data/cities/marshall/the-green-scene-of-marshall.yml
@@ -7,5 +7,5 @@ city: Marshall
 street: "West Michigan Avenue"
 housenumber: 142
 phone: "2695588080"
-opening_hours: "Mon-sat 10:00-18:00"
+opening_hours: "Mo-Sa 10:00-18:00"
 website: ""
