update content and data

--- a/data/cities/canton/mobil-mart-4.yml
+++ b/data/cities/canton/mobil-mart-4.yml
@@ -1,11 +1,11 @@
-id: 8592507009
-type: node
-latitude: 42.13749
-longitude: -83.2385
-postcode: "48183"
+id: 460567171
+type: way
+latitude: 42.27929
+longitude: -83.43629
+postcode: "48188"
 city: Canton
-street: "West Road"
-housenumber: 20995
-phone: ""
+street: "Michigan Avenue"
+housenumber: 40401
+phone: "+1-734-895-7836"
 opening_hours: "24/7"
 website: ""
