--- a/data/cities/detroit/metro-by-t-mobile-7.yml
+++ b/data/cities/detroit/metro-by-t-mobile-7.yml
@@ -1,11 +1,11 @@
-id: 611246004
-type: way
-latitude: 42.43384
-longitude: -83.04434
-postcode: ""
+id: 10201117809
+type: node
+latitude: 42.41526
+longitude: -83.21969
+postcode: "48219"
 city: Detroit
-street: ""
-housenumber: 
-phone: ""
+street: "West McNichols Road"
+housenumber: 18133
+phone: "+1 313-541-1111"
 opening_hours: ""
-website: ""
+website: "https://www.metrobyt-mobile.com/storelocator/mi/detroit/18133-w-mcnichols-rd"
