--- a/data/cities/frankenmuth/amazin-mitten.yml
+++ b/data/cities/frankenmuth/amazin-mitten.yml
@@ -1,7 +1,7 @@
-id: 651807790
-type: way
-latitude: 43.32799
-longitude: -83.74032
+id: 10177626989
+type: node
+latitude: 43.3279
+longitude: -83.74025
 postcode: "48734"
 city: Frankenmuth
 street: "South Main Street"
