--- a/data/cities/frankenmuth/bronners-christmas-wonderland.yml
+++ b/data/cities/frankenmuth/bronners-christmas-wonderland.yml
@@ -1,7 +1,7 @@
-id: 40437317
-type: way
-latitude: 43.31296
-longitude: -83.73658
+id: 10177626936
+type: node
+latitude: 43.31412
+longitude: -83.73661
 postcode: "48734"
 city: Frankenmuth
 street: "Christmas Lane"
