--- a/data/cities/frankenmuth/conlee-oil-company.yml
+++ b/data/cities/frankenmuth/conlee-oil-company.yml
@@ -1,7 +1,7 @@
-id: 682252853
-type: way
-latitude: 43.32126
-longitude: -83.74005
+id: 10177319336
+type: node
+latitude: 43.3212
+longitude: -83.73999
 postcode: "48734"
 city: Frankenmuth
 street: "South Main Street"
