--- a/data/cities/frankenmuth/kerns-sausages.yml
+++ b/data/cities/frankenmuth/kerns-sausages.yml
@@ -1,7 +1,7 @@
-id: 309265520
-type: way
-latitude: 43.32199
-longitude: -83.74089
+id: 10177319325
+type: node
+latitude: 43.3219
+longitude: -83.74074
 postcode: "48734"
 city: Frankenmuth
 street: "West Jefferson Street"
