--- a/data/cities/frankenmuth/willis-sausage-company.yml
+++ b/data/cities/frankenmuth/willis-sausage-company.yml
@@ -1,7 +1,7 @@
-id: 651728092
-type: way
-latitude: 43.33235
-longitude: -83.73891
+id: 10180125834
+type: node
+latitude: 43.33231
+longitude: -83.73863
 postcode: "48734"
 city: Frankenmuth
 street: "South Main Street"
