--- a/data/cities/frankenmuth/zak-and-macs-chocolate-haus.yml
+++ b/data/cities/frankenmuth/zak-and-macs-chocolate-haus.yml
@@ -1,7 +1,7 @@
-id: 651807791
-type: way
-latitude: 43.3281
-longitude: -83.74022
+id: 10177626990
+type: node
+latitude: 43.32802
+longitude: -83.74018
 postcode: "48734"
 city: Frankenmuth
 street: "South Main Street"
