--- a/data/cities/grand-rapids/northeast-automotive.yml
+++ b/data/cities/grand-rapids/northeast-automotive.yml
@@ -6,6 +6,6 @@ postcode: "49505"
 city: Grand Rapids
 street: "Knapp Street Northeast"
 housenumber: 1156
-phone: "+1 (616) 364-6200"
+phone: "+1 616 364 6200"
 opening_hours: "Mo-Th 07:30-17:00; Fr 08:00-12:00"
 website: "https://www.northeastautomotive.net/"
