--- a/data/cities/greenville/parker-arntz-plumbing-and-heating-inc.yml
+++ b/data/cities/greenville/parker-arntz-plumbing-and-heating-inc.yml
@@ -6,6 +6,6 @@ postcode: "48838"
 city: Greenville
 street: "South Greenville Road"
 housenumber: 6319
-phone: "+1 (616) 225-9150"
+phone: "+1 616 225 9150"
 opening_hours: "Mo-Fr 08:00-17:00"
 website: "https://www.parker-arntz.com/"
