--- a/data/cities/romulus/7-eleven-2.yml
+++ b/data/cities/romulus/7-eleven-2.yml
@@ -1,11 +1,11 @@
-id: 548387436
+id: 827262342
 type: way
-latitude: 42.20938
-longitude: -83.32589
+latitude: 42.2502
+longitude: -83.4249
 postcode: "48174"
 city: Romulus
-street: "Northline Road"
-housenumber: 29351
-phone: "+1 734 955 1143"
-opening_hours: "24/7"
+street: "Ecorse Road"
+housenumber: 39390
+phone: "+1 734 727 0908"
+opening_hours: "05:30-23:00"
 website: ""
