--- a/data/cities/romulus/7-eleven.yml
+++ b/data/cities/romulus/7-eleven.yml
@@ -1,11 +1,11 @@
-id: 4519828666
-type: node
-latitude: 42.25013
-longitude: -83.42478
+id: 548387436
+type: way
+latitude: 42.20938
+longitude: -83.32589
 postcode: "48174"
 city: Romulus
-street: "Ecorse Road"
-housenumber: 39390
-phone: "+1 734 727 0908"
-opening_hours: "05:30-23:00"
+street: "Northline Road"
+housenumber: 29351
+phone: "+1 734 955 1143"
+opening_hours: "24/7"
 website: ""
