--- a/data/cities/wyandotte/family-dollar.yml
+++ b/data/cities/wyandotte/family-dollar.yml
@@ -1,7 +1,7 @@
-id: 148013266
-type: way
-latitude: 42.20201
-longitude: -83.15104
+id: 10199683271
+type: node
+latitude: 42.2019
+longitude: -83.15122
 postcode: "48192"
 city: Wyandotte
 street: "Maple Street"
