--- a/data/cities/canton/mobil-mart-3.yml
+++ b/data/cities/canton/mobil-mart-3.yml
@@ -1,11 +1,11 @@
-id: 8591620181
+id: 8592507009
 type: node
-latitude: 42.27924
-longitude: -83.4364
-postcode: "48188"
+latitude: 42.13749
+longitude: -83.2385
+postcode: "48183"
 city: Canton
-street: "Michigan Avenue"
-housenumber: 40401
-phone: "+1-734-895-7836"
+street: "West Road"
+housenumber: 20995
+phone: ""
 opening_hours: "24/7"
 website: ""
