--- a/data/cities/frankenmuth/cobblers-bench-foot-health-center.yml
+++ b/data/cities/frankenmuth/cobblers-bench-foot-health-center.yml
@@ -1,7 +1,7 @@
-id: 682252897
-type: way
-latitude: 43.32187
-longitude: -83.74029
+id: 10177319326
+type: node
+latitude: 43.32182
+longitude: -83.74018
 postcode: "48734"
 city: Frankenmuth
 street: "South Main Street"
