--- a/data/cities/grand-rapids/autozone.yml
+++ b/data/cities/grand-rapids/autozone.yml
@@ -6,6 +6,6 @@ postcode: "49504"
 city: Grand Rapids
 street: "Leonard Street Northwest"
 housenumber: 619
-phone: "+1 (616) 742-1100"
+phone: "+1 616 742 1100"
 opening_hours: "Su 08:00-21:00; Mo-Fr 07:30-21:00; Sa 08:00-21:00"
-website: "www.autozone.com"
+website: "https://www.autozone.com"
