--- a/data/cities/grand-rapids/rapid-oil-and-lube.yml
+++ b/data/cities/grand-rapids/rapid-oil-and-lube.yml
@@ -6,6 +6,6 @@ postcode: "49505"
 city: Grand Rapids
 street: "Fuller Avenue Northeast"
 housenumber: 2000
-phone: "+1 (616) 364-3114"
+phone: "+1 616 364-3114"
 opening_hours: "Mo-Fr 08:00-18:00; Sa 08:00-16:00"
-website: "rapidoilandlubegr.com"
+website: "https://rapidoilandlubegr.com"
