--- a/data/cities/livonia/meijer.yml
+++ b/data/cities/livonia/meijer.yml
@@ -7,5 +7,5 @@ city: Livonia
 street: "Middlebelt Road"
 housenumber: 13000
 phone: "+1-734-367-0000"
-opening_hours: ""
+opening_hours: "Mo-Fr 06:00-24:00"
 website: ""
