update content and data

--- a/data/cities/detroit/rite-aid-2.yml
+++ b/data/cities/detroit/rite-aid-2.yml
@@ -1,11 +1,11 @@
-id: 457311502
+id: 442364932
 type: way
-latitude: 42.38652
-longitude: -82.94816
-postcode: "48215"
+latitude: 42.3115
+longitude: -83.1268
+postcode: "48209"
 city: Detroit
-street: "Mack Avenue"
-housenumber: 14820
+street: "West Vernor Highway"
+housenumber: 7843
 phone: ""
 opening_hours: ""
 website: ""
