--- a/data/cities/detroit/rite-aid-3.yml
+++ b/data/cities/detroit/rite-aid-3.yml
@@ -1,11 +1,11 @@
-id: 750622422
+id: 457311502
 type: way
-latitude: 42.43235
-longitude: -83.16088
-postcode: "48221"
+latitude: 42.38652
+longitude: -82.94816
+postcode: "48215"
 city: Detroit
-street: "Wyoming Street"
-housenumber: 19150
+street: "Mack Avenue"
+housenumber: 14820
 phone: ""
 opening_hours: ""
 website: ""
