--- a/data/cities/detroit/rite-aid-4.yml
+++ b/data/cities/detroit/rite-aid-4.yml
@@ -1,11 +1,11 @@
-id: 914524336
+id: 750622422
 type: way
-latitude: 42.44806
-longitude: -83.08292
-postcode: "48234"
+latitude: 42.43235
+longitude: -83.16088
+postcode: "48221"
 city: Detroit
-street: "East 8 Mile Road"
-housenumber: 1900
+street: "Wyoming Street"
+housenumber: 19150
 phone: ""
 opening_hours: ""
 website: ""
