--- a/data/cities/grand-rapids/bp-shop-3.yml
+++ b/data/cities/grand-rapids/bp-shop-3.yml
@@ -4,7 +4,7 @@ latitude: 42.94877
 longitude: -85.64895
 postcode: "49507"
 city: Grand Rapids
-street: "Franklin Street Southeast"
+street: "Martin Luther King Jr Street Southeast"
 housenumber: 801
 phone: ""
 opening_hours: ""
