--- a/data/cities/grand-rapids/franklin-beer-wine-and-gas.yml
+++ b/data/cities/grand-rapids/franklin-beer-wine-and-gas.yml
@@ -4,7 +4,7 @@ latitude: 42.94917
 longitude: -85.67643
 postcode: "49503"
 city: Grand Rapids
-street: "Franklin Street Southwest"
+street: "Martin Luther King Jr Street Southwest"
 housenumber: 331
 phone: ""
 opening_hours: ""
