--- a/data/cities/berkley/toadvine-books.yml
+++ b/data/cities/berkley/toadvine-books.yml
@@ -7,5 +7,5 @@ city: Berkley
 street: "Coolidge Highway"
 housenumber: 2783
 phone: "+1-248-439-0409"
-opening_hours: ""
+opening_hours: "Tu-Sa 11:00-18:00; Su 12:00-17:00"
 website: "http://www.toadvinebooks.com/"
