--- a/data/cities/detroit/autozone-3.yml
+++ b/data/cities/detroit/autozone-3.yml
@@ -1,11 +1,11 @@
-id: 377811312
-type: way
-latitude: 42.31548
-longitude: -83.1073
-postcode: "48209"
+id: 10212178204
+type: node
+latitude: 42.41859
+longitude: -83.08648
+postcode: "48203"
 city: Detroit
-street: "West Vernor Highway"
-housenumber: 6117
-phone: "+1-313-297-2757"
+street: "East McNichols Road"
+housenumber: 1617
+phone: ""
 opening_hours: ""
-website: "https://www.autozone.com/locations/mi/detroit/6117-w-vernor.html"
+website: ""
