--- a/data/cities/detroit/rite-aid.yml
+++ b/data/cities/detroit/rite-aid.yml
@@ -1,11 +1,11 @@
-id: 442364932
-type: way
-latitude: 42.3115
-longitude: -83.1268
-postcode: "48209"
+id: 5120273731
+type: node
+latitude: 42.35417
+longitude: -83.06229
+postcode: "48201"
 city: Detroit
-street: "West Vernor Highway"
-housenumber: 7843
-phone: ""
-opening_hours: ""
-website: ""
+street: "Woodward Avenue"
+housenumber: 4612
+phone: "+1 313 832 3247"
+opening_hours: "08:00-22:00"
+website: "https://locations.riteaid.com/locations/mi/detroit/4612-woodward-avenue.html"
