--- a/data/cities/plymouth/deluxe-nails-and-spa.yml
+++ b/data/cities/plymouth/deluxe-nails-and-spa.yml
@@ -1,11 +1,11 @@
-id: 8620147303
+id: 10212962529
 type: node
-latitude: 42.35912
+latitude: 42.35918
 longitude: -83.48022
 postcode: "48170"
 city: Plymouth
 street: "South Sheldon Road"
-housenumber: 1472
+housenumber: 1464
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 09:30-19:30; Sa 09:30-19:00; Su off"
 website: ""
