update content and data

--- a/data/cities/allen-park/autozone.yml
+++ b/data/cities/allen-park/autozone.yml
@@ -1,7 +1,7 @@
-id: 636128233
-type: way
+id: 10223878131
+type: node
 latitude: 42.25837
-longitude: -83.20214
+longitude: -83.20253
 postcode: "48101"
 city: Allen Park
 street: "Southfield Road"
