--- a/data/cities/canton/verizon.yml
+++ b/data/cities/canton/verizon.yml
@@ -1,11 +1,11 @@
-id: 925782904
-type: way
-latitude: 42.32341
-longitude: -83.44826
+id: 10223878140
+type: node
+latitude: 42.32328
+longitude: -83.45415
 postcode: "48187"
 city: Canton
 street: "Ford Road"
-housenumber: 41350
+housenumber: 41802
 phone: ""
 opening_hours: ""
 website: ""
