--- a/data/cities/canton/goodwill.yml
+++ b/data/cities/canton/goodwill.yml
@@ -1,7 +1,7 @@
-id: 284327371
-type: way
-latitude: 42.32201
-longitude: -83.45505
+id: 10223878138
+type: node
+latitude: 42.32227
+longitude: -83.45473
 postcode: "48187"
 city: Canton
 street: "Ford Road"
