update content and data

--- a/data/cities/allen-park/southfield-gas-and-go.yml
+++ b/data/cities/allen-park/southfield-gas-and-go.yml
@@ -1,7 +1,7 @@
-id: 8587250882
-type: node
-latitude: 42.26406
-longitude: -83.22138
+id: 636121879
+type: way
+latitude: 42.26415
+longitude: -83.22143
 postcode: "48101"
 city: Allen Park
 street: "Southfield Road"
