--- a/data/cities/belleville/mobil-mart.yml
+++ b/data/cities/belleville/mobil-mart.yml
@@ -1,11 +1,11 @@
-id: 8590080280
+id: 8590080332
 type: node
-latitude: 42.2226
-longitude: -83.44123
+latitude: 42.21565
+longitude: -83.54511
 postcode: "48111"
 city: Belleville
-street: "Haggerty Road"
-housenumber: 11250
-phone: ""
-opening_hours: ""
+street: "Rawsonville Road"
+housenumber: 2120
+phone: "+1 734 483 5320"
+opening_hours: "24/7"
 website: ""
