--- a/data/cities/romulus/shell-3.yml
+++ b/data/cities/romulus/shell-3.yml
@@ -1,11 +1,11 @@
-id: 782560269
+id: 810855640
 type: way
-latitude: 42.23197
-longitude: -83.32666
+latitude: 42.16768
+longitude: -83.26612
 postcode: "48174"
 city: Romulus
-street: "Middlebelt Road"
-housenumber: 9999
+street: "Telegraph Road"
+housenumber: 18971
 phone: ""
 opening_hours: ""
 website: ""
