--- a/data/cities/belleville/mobil-mart-2.yml
+++ b/data/cities/belleville/mobil-mart-2.yml
@@ -1,11 +1,11 @@
-id: 8590080332
-type: node
-latitude: 42.21565
-longitude: -83.54511
+id: 925602004
+type: way
+latitude: 42.22267
+longitude: -83.44112
 postcode: "48111"
 city: Belleville
-street: "Rawsonville Road"
-housenumber: 2120
-phone: "+1 734 483 5320"
-opening_hours: "24/7"
+street: "Haggerty Road"
+housenumber: 11250
+phone: ""
+opening_hours: ""
 website: ""
