--- a/data/cities/detroit/dollar-general-8.yml
+++ b/data/cities/detroit/dollar-general-8.yml
@@ -1,11 +1,11 @@
-id: 9655292876
+id: 9810712751
 type: node
-latitude: 42.43523
-longitude: -82.98835
-postcode: "48205"
+latitude: 42.37032
+longitude: -83.11663
+postcode: "48206"
 city: Detroit
-street: "East 7 Mile Road"
-housenumber: 13341
-phone: ""
-opening_hours: ""
+street: "Joy Road"
+housenumber: 3431
+phone: "+1 (313) 572-0974"
+opening_hours: "Mo-Su 08:00-20:00"
 website: ""
