--- a/data/cities/romulus/shell-4.yml
+++ b/data/cities/romulus/shell-4.yml
@@ -1,11 +1,11 @@
-id: 810855640
+id: 928730252
 type: way
-latitude: 42.16768
-longitude: -83.26612
+latitude: 42.19622
+longitude: -83.3073
 postcode: "48174"
 city: Romulus
-street: "Telegraph Road"
-housenumber: 18971
+street: "Eureka Road"
+housenumber: 27460
 phone: ""
 opening_hours: ""
 website: ""
