--- a/data/cities/wayne/bp-shop-2.yml
+++ b/data/cities/wayne/bp-shop-2.yml
@@ -1,11 +1,11 @@
-id: 8615538251
-type: node
-latitude: 42.28037
-longitude: -83.39016
+id: 928939734
+type: way
+latitude: 42.27901
+longitude: -83.42136
 postcode: "48184"
 city: Wayne
-street: "East Michigan Avenue"
-housenumber: 35600
-phone: ""
-opening_hours: ""
+street: "Michigan Avenue"
+housenumber: 38800
+phone: "+1 734 326 9190"
+opening_hours: "24/7"
 website: ""
