--- a/data/cities/wayne/bp-shop.yml
+++ b/data/cities/wayne/bp-shop.yml
@@ -1,11 +1,11 @@
-id: 8615538249
+id: 8615538251
 type: node
-latitude: 42.27905
-longitude: -83.42125
+latitude: 42.28037
+longitude: -83.39016
 postcode: "48184"
 city: Wayne
-street: "Michigan Avenue"
-housenumber: 38800
-phone: "+1 734 326 9190"
-opening_hours: "24/7"
+street: "East Michigan Avenue"
+housenumber: 35600
+phone: ""
+opening_hours: ""
 website: ""
