update content and data

--- a/data/cities/detroit/family-dollar-30.yml
+++ b/data/cities/detroit/family-dollar-30.yml
@@ -1,11 +1,11 @@
-id: 316618851
-type: way
-latitude: 42.42406
-longitude: -83.27839
-postcode: "48219"
+id: 10274629371
+type: node
+latitude: 42.36113
+longitude: -82.98276
+postcode: "48214"
 city: Detroit
-street: "Grand River Avenue"
-housenumber: 24133
+street: "East Jefferson Avenue"
+housenumber: 9911
 phone: ""
 opening_hours: ""
 website: ""
