--- a/data/cities/detroit/payless-market.yml
+++ b/data/cities/detroit/payless-market.yml
@@ -4,8 +4,8 @@ latitude: 42.35563
 longitude: -83.00705
 postcode: "48214"
 city: Detroit
-street: "Kercheval Street"
-housenumber: 
+street: "East Grand Boulevard"
+housenumber: 428
 phone: ""
 opening_hours: ""
 website: ""
