--- a/data/cities/detroit/riviera-auto-service.yml
+++ b/data/cities/detroit/riviera-auto-service.yml
@@ -1,7 +1,7 @@
-id: 397513386
-type: way
-latitude: 42.36108
-longitude: -82.98245
+id: 10274629370
+type: node
+latitude: 42.36112
+longitude: -82.98229
 postcode: "48214"
 city: Detroit
 street: "East Jefferson Avenue"
