update content and data

--- a/data/cities/farmington/heeney-sundquist-funeral-home.yml
+++ b/data/cities/farmington/heeney-sundquist-funeral-home.yml
@@ -1,7 +1,7 @@
-id: 337894416
-type: way
-latitude: 42.46558
-longitude: -83.37635
+id: 10297239288
+type: node
+latitude: 42.46542
+longitude: -83.37622
 postcode: "48336"
 city: Farmington
 street: "Farmington Road"
