--- a/data/cities/southgate/shell.yml
+++ b/data/cities/southgate/shell.yml
@@ -1,7 +1,7 @@
-id: 220522926
-type: way
-latitude: 42.21414
-longitude: -83.21946
+id: 10297565057
+type: node
+latitude: 42.21405
+longitude: -83.21922
 postcode: "48195"
 city: Southgate
 street: "Northline Road"
