update content and data

--- a/data/cities/detroit/family-dollar-34.yml
+++ b/data/cities/detroit/family-dollar-34.yml
@@ -1,11 +1,11 @@
-id: 416897641
+id: 325344220
 type: way
-latitude: 42.3709
-longitude: -82.95529
-postcode: ""
+latitude: 42.41807
+longitude: -83.25972
+postcode: "48219"
 city: Detroit
-street: "East Jefferson Avenue"
-housenumber: 
+street: "West Grand River Avenue"
+housenumber: 22200
 phone: ""
 opening_hours: ""
 website: ""
