--- a/data/cities/detroit/family-dollar-31.yml
+++ b/data/cities/detroit/family-dollar-31.yml
@@ -1,11 +1,11 @@
-id: 316618851
-type: way
-latitude: 42.42372
-longitude: -83.27842
-postcode: "48219"
+id: 10558541915
+type: node
+latitude: 42.43257
+longitude: -83.09979
+postcode: "48203"
 city: Detroit
-street: "Grand River Avenue"
-housenumber: 24133
+street: "East 7 Mile Road"
+housenumber: 401
 phone: ""
 opening_hours: ""
 website: ""
