--- a/data/cities/detroit/family-dollar-32.yml
+++ b/data/cities/detroit/family-dollar-32.yml
@@ -1,11 +1,11 @@
-id: 325120148
+id: 316618851
 type: way
-latitude: 42.35795
-longitude: -83.23532
-postcode: "48228"
+latitude: 42.42372
+longitude: -83.27842
+postcode: "48219"
 city: Detroit
-street: "Joy Road"
-housenumber: 19848
+street: "Grand River Avenue"
+housenumber: 24133
 phone: ""
 opening_hours: ""
 website: ""
