--- a/data/cities/detroit/family-dollar-36.yml
+++ b/data/cities/detroit/family-dollar-36.yml
@@ -1,11 +1,11 @@
-id: 758734111
+id: 626775065
 type: way
-latitude: 42.33141
-longitude: -83.14183
-postcode: "48210"
+latitude: 42.36047
+longitude: -83.09892
+postcode: "48208"
 city: Detroit
-street: "Michigan Avenue"
-housenumber: 8000
+street: "West Grand Boulevard"
+housenumber: 2322
 phone: ""
 opening_hours: ""
 website: ""
