--- a/data/cities/detroit/family-dollar-37.yml
+++ b/data/cities/detroit/family-dollar-37.yml
@@ -1,11 +1,11 @@
-id: 925276979
+id: 758734111
 type: way
-latitude: 42.39528
-longitude: -83.11718
-postcode: "48238"
+latitude: 42.33141
+longitude: -83.14183
+postcode: "48210"
 city: Detroit
-street: "West Davison Street"
-housenumber: 2250
+street: "Michigan Avenue"
+housenumber: 8000
 phone: ""
 opening_hours: ""
-website: "https://www.familydollar.com/locations/mi/detroit/32297/"
+website: ""
