--- a/data/cities/livonia/target.yml
+++ b/data/cities/livonia/target.yml
@@ -2,10 +2,10 @@ id: 241960869
 type: way
 latitude: 42.43503
 longitude: -83.4306
-postcode: ""
+postcode: "48152"
 city: Livonia
-street: ""
-housenumber: 
+street: "Haggerty Road"
+housenumber: 20100
 phone: "+1 734 953 6620"
-opening_hours: ""
+opening_hours: "Mo-Su 08:00-22:00"
 website: ""
