--- a/data/cities/southgate/belle-tire.yml
+++ b/data/cities/southgate/belle-tire.yml
@@ -6,6 +6,6 @@ postcode: "48195"
 city: Southgate
 street: "Eureka Road"
 housenumber: 15555
-phone: ""
+phone: "+1 734-785-4035"
 opening_hours: ""
-website: ""
+website: "https://belletire.com"
