--- a/data/cities/woodhaven/belle-tire.yml
+++ b/data/cities/woodhaven/belle-tire.yml
@@ -6,6 +6,6 @@ postcode: "48183"
 city: Woodhaven
 street: "Allen Road"
 housenumber: 23901
-phone: ""
+phone: "+1 734-720-9801"
 opening_hours: ""
-website: ""
+website: "https://belletire.com"
